# connectors

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile_ubi9  EXTERNAL_IMPORT_A_TO_C_FIXES.md  Makefile  README.md  build_all_ubi9.sh  build_ubi9.sh  check_radar.sh  ci-requirements.txt  cliff.toml  codecov.yml  dummy.txt  dynamic.yml  generate_manifest.sh  linter_stix_id_generator.py  manifest.json  pyproject.toml  renovate.json  run_test.sh  test.json  test.py
connectors-sdk/: .gitignore  README.md  pyproject.toml
connectors-sdk/TDRs/: 0000-00-00-template.md  2025-06-03-Use_of_TDRs.md  2025-06-04-Mirroring_OCTI_UI.md  2025-06-05-Poetry_build_backend.md  2025-06-06-Rely_on_pydantic_OCTI_models.md  2025-06-09-Model_registry_to_handle_octi_models_nested_defintions.md  2025-06-10-Automated_documentation_with_sphinx.md  2025-06-10-Enforcing_strict_code_quality_checks.md  2025-06-11-Enforcing_code_coverage.md  2025-06-12-Error_and_warning_handling_tools.md  2025-10-01-Typing_and_validation_of_configurations_with_Pydantic_Settings.md  2026-02-27-Deprecating_configuration_variables _with_BaseConnectorSettings.md  2026-04-14-Typing_and_validation_of_connector_state_with_pydantic.md
connectors-sdk/TDRs/deprecated/: 2025-06-09-Model_registry_to_handle_octi_models_nested_defintions.md
connectors-sdk/connectors_sdk/: __init__.py
connectors-sdk/connectors_sdk/client/: __init__.py  base_client_api.py  exceptions.py  rate_limit.py
connectors-sdk/connectors_sdk/connectors/: __init__.py  _work_manager.py  base_data_processor.py  base_external_import.py  external_import_connector.py  managers.py
connectors-sdk/connectors_sdk/core/: __init__.py
connectors-sdk/connectors_sdk/exceptions/: __init__.py  error.py  warning.py
connectors-sdk/connectors_sdk/http_client/: base_http_client.py  exceptions.py  http_adapter.py
connectors-sdk/connectors_sdk/logging/: __init__.py  _base_logger.py  logger.py  sdk_logger.py
connectors-sdk/connectors_sdk/models/: __init__.py  _author.py  _base_identified_entity.py  _location.py  _model_registry.py  _observable.py  administrative_area.py  associated_file.py  attack_pattern.py  autonomous_system.py  base_author_entity.py  base_entity.py  base_identified_entity.py  base_identified_object.py  base_object.py  base_observable_entity.py  campaign.py  city.py  country.py  domain_name.py  email_address.py  enums.py  external_reference.py  file.py  hostname.py  incident.py  indicator.py  individual.py  infrastructure.py  intrusion_set.py  ipv4_address.py  ipv6_address.py  kill_chain_phase.py  mac_address.py  malware.py  media_content.py  note.py  observed_data.py  organization.py  organization_author.py  (+15 more)
connectors-sdk/connectors_sdk/settings/: __init__.py  _settings_loader.py  annotated_types.py  base_settings.py  deprecations.py  exceptions.py  json_schema.py  json_schema_generator.py
connectors-sdk/connectors_sdk/state_manager/: __init__.py  (+2 more)
connectors-sdk/docs/: CONTRIBUTING.md  Dummy_end_to_end_test_octi_models_example.md  HOW-TO-Handle-errors-in-connectors.md  HOW_TO_Generate_sphinx_doc.md  HOW_TO_Implement_a_new_observable.md  HOW_TO_Implement_a_new_relationship.md
connectors-sdk/tests/: conftest.py  test-requirements.txt  test_api.py
elastic-threatintel/: .gitignore  Dockerfile  README.md  config.reference.yml  config.yml.sample  entrypoint.sh  pyproject.toml  pytest.ini
elastic-threatintel/data/: threatintel-index-template.json
elastic-threatintel/elastic_threatintel/: conf.py  console.py  elastic_threatintel.py  import_manager.py  intel_cache.py  sightings_manager.py  stix2ecs.py  utils.py
elastic-threatintel/src/: elastic_threatintel.py  estc_to_octi.py  stix2ecs.py
elastic-threatintel/tests/: test_elastic_threatintel.py  test_parsing.py  test_stix2ecs.py
external-import/dragos/: .dockerignore  .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  docker-compose.yml.sample  main.py  pyproject.toml  requirements.txt
external-import/google-secops-siem-incidents/: .dockerignore  .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint.sh  pyproject.toml
external-import/google-ti-feeds/: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.yml.sample  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
external-import/group-ib/: .build.env  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_ubi9  README.md  README_dev.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
external-import/ironnet/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
external-import/opencti-stream/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
external-import/proofpoint-et-reputation/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
external-import/proofpoint-tap/: .env.sample  .gitignore  Dockerfile  README.md  app.py  config.yaml.sample  docker-compose.yml  docker-compose.yml.sample  pyproject.toml
external-import/spycloud/: Dockerfile  README.md  config.yml.sample  docker-compose.yml  docker-compose.yml.sample  entrypoint.sh  main.py  pyproject.toml
external-import/tenable-security-center/: Dockerfile  README.md  app.py  config.yaml.sample  docker-compose.yml  docker-compose.yml.sample  env.sample  pyproject.toml
external-import/urlscan/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
external-import/vulncheck/: .dockerignore  .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint.sh  pyproject.toml
internal-enrichment/proofpoint-et-intelligence/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
internal-enrichment/shodan-internetdb/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
stream/elastic/: .dockerignore  .gitignore  Dockerfile  README.md  config.reference.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
(+9242 files in other folders)
