[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "connectors-sdk"
dynamic = ["version"]
description = "Connectors SDK for Octi Connectors."
requires-python = ">=3.11, <3.13"

[tool.poetry]
version = "0.0.0" # unused as the vrsion is dynamically set by project.dynamic but needed for poetry to work
packages = [{include = "connectors_sdk"}]
