[tool.poetry]
name = "elastic-threatintel"
version = "0.1.0"
description = ""
authors = ["Derek Ditch <dcode@elastic.co>"]

[tool.poetry.scripts]
connector-elastic-threatintel = 'elastic_threatintel.console:run'

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^7.12.1"
pycti = "4.5.0"
scalpl = "^0.4.2"
docopt = "^0.6.2"
python-json-logger = "^2.0.1"
elasticsearch-dsl = ">=7.0.0,<8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.4b2"
flake8 = "^3.9.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --flake8"
testpaths = ["."]
