[tool.poetry]
name = "elastic-threatintel"
version = "0.2.0"
description = """
Connector for OpenCTI that writes indicator objects to Elasticsearch in ECS format, allowing Indicator Match rules.
Successful matches found in the Elastic Detection Engine will be reported as sightings of the indicator in OpenCTI.
"""
authors = ["Derek Ditch <dcode@elastic.co>"]

[tool.poetry.scripts]
connector-elastic-threatintel = 'elastic_threatintel.console:main'

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^7.12.1"
pycti = "4.5.3"
scalpl = "^0.4.2"
docopt = "^0.6.2"
python-json-logger = "^2.0.1"
elasticsearch-dsl = ">=7.0.0,<8.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.4b2"
flake8 = "^3.9.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --flake8"
testpaths = ["."]

[tool.flake8]
ignore = "E,W"
