[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "google-secops-siem-incidents-connector"
version = "0.1.0"
description = "Google SecOps external-import connector for OpenCTI."
requires-python = ">=3.11, <3.13"
dependencies = [
    "pycti==7.260710.0",
    "pydantic~=2.11.3",
    "requests~=2.33.0",
    "aiohttp~=3.11.0",
    "google-auth~=2.0",
    "connectors-sdk @ git+https://github.com/OpenCTI-Platform/connectors.git@master#subdirectory=connectors-sdk"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=7,<8",
    "mypy>=1.15.0,<2",
    "ruff>=0.14.0,<1",
    "black==26.3.1",
    "isort==7.0.0",
    "flake8>=7.0.0",
    "polyfactory>=3.3.0,<4",
]

[tool.poetry]
version = "0.1.0"
packages = [{include = "google_secops_siem_incidents", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]
addopts = [
    "--cov=google_secops_siem_incidents"
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["I001", "D203", "E501", "F821", "D205", "D213", "D211", "G004", "TRY003", "D407", "D408", "D409"]
select = ["E", "F", "W", "D", "G", "T", "B", "C", "N", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
exclude = ['^tests', '^.venv']
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["pycti.*", "stix2.*", "connectors_sdk.*"]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"
src_paths = ["."]

[tool.flake8]
ignore = ["W", "E"]
max-line-length = 88
per-file-ignores = ["tests/*:S101", "tests/**/*:S101"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
google-secops-siem-incidents-connector = { workspace = true }

[dependency-groups]
dev = [
    "google-secops-siem-incidents-connector[test]",
]
