[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "GoogleTIFeeds"
dynamic = ["version"]
description = "External Import connector to retrieve feeds from GoogleTI."
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyYAML ~=6.0.2",
    "aiohttp ~=3.12.13",
    "pycti ~=6.7.1",
    "pydantic ~=2.11.7",
    "pydantic_settings ~=2.10.1",
    "python-dotenv ~=1.1.1",
    "stix2 ~=3.0.1",
    "isodate ~=0.7.2",
    "dotenv ~= 0.9.9",
    "connectors-sdk @ git+https://github.com/OpenCTI-Platform/connectors.git@6.7.1#subdirectory=connectors-sdk",
]

[tool.poetry]
version = "1.0.0"
packages = [{ include = "connector" }]

[tool.poetry.group.dev.dependencies]
black = "~=25.1"
isort = "~=6.0.1"
ruff = "~=0.12.1"
mypy = "~=1.16.1"
pip_audit = "~=2.9.0"
pre-commit = "~=4.2.0"
flake8 = "~=7.3.0"
types-PyYAML = "~=6.0.12"

[tool.poetry.group.test.dependencies]
pytest = "~=8.4.1"
pytest-asyncio = "~=1.0.0"
pytest-order = "~=1.3.0"
polyfactory = "~=2.21.0"

[project.scripts]
GoogleTIFeeds = "connector.__main__:main"

[tool.pytest.ini_options]
testpaths = ["./tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "I001",
    "D203",
    "E501",
    "F821",
    "D205",
    "D213",
    "D211",
    "G004",
    "TRY003",
    "D104",
    "D407",
    "D408",
    "D409",
]
select = ["E", "F", "W", "D", "G", "T", "B", "C", "N", "I", "S"]

[tool.mypy]
strict = true
exclude = [
    '^tests',
    '^docs',
    '^build',
    '^dist',
    '^venv',
    '^site-packages',
    '^__pypackages__',
    '^.venv',
]
plugins = ["pydantic.mypy"]
