[tool.poetry]
name = "ironnet"
version = "0.0.1"
description = "OpenCTI connector for IronNet IronRadar"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
pycti = "5.8.1"
pydantic = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
