[project]
name = "proofpoint-et-reputation"
version = "0.1.0"
description = "Information coming soon"
readme = "README.md"
authors = [
    { name = "Hugo Dupras", email = "hugo.dupras@filigran.io" }
]
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
log_cli = true
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]

#addopts = "-s"
