[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spycloud"
description = "Filigran connector to import data from Spycloud into OpenCTI"
dynamic = ["version"]
readme = "README.md"
authors = [
  {name = "Filigran"},
  {name = "Pauline Eustachy", email = "pauline.eustachy@filigran.io"},
]
requires-python = ">= 3.11, <3.13"
dependencies = [
    "pycti==6.7.2",
    "validators~=0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1,<9",
]

all = [
    "spycloud[test]"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "spycloud_connector.__version__"}