[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vclib"
version = "0.1.0"
description = "VulnCheck connector for OpenCTI"
readme = "README.md"
authors = [{ name = "VulnCheck" }]
requires-python = ">= 3.12, <3.13"
dependencies = [
  "vulncheck-sdk==0.0.40",
  "pycti==6.9.22",
  "pydantic==2.11.9",
  "validators==0.35.0",
  "psutil==7.1.2",
  "stix2==3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-mock==3.14.0",
  "flake8==7.3.0",
  "black==25.12.0",
  "isort==6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
