[project]
name = "proofpoint-et-intelligence"
version = "0.1.0"
description = "Proofpoint ET Intelligence connector for OCTI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
log_cli = true
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]
#addopts = "-s"