[tool.poetry]
name = "elastic"
version = "5.1.0"
description = """
Connector for OpenCTI that writes indicator objects to Elasticsearch in ECS format (when in 'ecs' mode), allowing
Indicator Match rules. Successful matches found in the Elastic Detection Engine will be reported as sightings of
the indicator in OpenCTI. The connector can also be run in 'stix' mode, which writes raw OpenCTI STIX documents
to the index configured.
"""
authors = ["Derek Ditch <dcode@elastic.co>"]
include = ["elastic/data/*.json"]

[tool.poetry.scripts]
elastic = 'elastic.console:main'

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^7.15.0"
pycti = "^5.1.0"
scalpl = "^0.4.2"
docopt = "^0.6.2"
python-json-logger = "^2.0.1"
elasticsearch-dsl = ">=7.0.0,<8.0.0"
python-datemath = "^1.5.5"
arrow = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.4b2"
flake8 = "^3.9.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --flake8"
testpaths = ["."]

[tool.flake8]
# Run with "pflake8"
ignore = "E203,E266,E501,W503"
max-line-length = 89
select = "B,C,E,F,W,T4,B9"
