[tool.poetry]
name = "elastic"
version = "0" # Will be overridden by __version__ field in __init__.py
description = "Connector for OpenCTI that writes indicator objects to Elasticsearch in ECS format."
authors = ["Derek Ditch <dcode@elastic.co>"]
include = ["elastic/data/*.json"]

# This plugin allows use of __version__ field in __init__.py
[tool.poetry-version-plugin]
source = "init"

[tool.poetry.scripts]
elastic = 'elastic.console:main'

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "^7.17.0"
pycti = "5.3.14"
scalpl = "^0.4.2"
docopt = "^0.6.2"
python-json-logger = "^2.0.1"
elasticsearch-dsl = ">=7.0.0,<8.0.0"
python-datemath = "^1.5.5"
arrow = "^1.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.4b2"
flake8 = "^3.9.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --flake8"
testpaths = ["."]

[tool.flake8]
# Run with "pflake8"
ignore = "E203,E266,E501,W503"
max-line-length = 89
select = "B,C,E,F,W,T4,B9"